perceptualdiff (2.1-4) unstable; urgency=medium

  * Support autopkgtest

 -- Barak A. Pearlmutter <bap@debian.org>  Sun, 18 Apr 2021 14:04:33 +0100

perceptualdiff (2.1-3) unstable; urgency=medium

  * Run test suite manually, since the callout was removed from cmake
  * Quilt patch with --help edits
  * Rebuild debian/perceptualdiff.1 with help2man and patched --help
  * Inactive stanza in debian/rules to rebuild perceptualdiff(1).

 -- Barak A. Pearlmutter <bap@debian.org>  Thu, 14 Jan 2021 08:43:38 +0000

perceptualdiff (2.1-2) unstable; urgency=medium

  * Track upstream development
  * Force dh buildsystem to cmake
  * Repair broken old debian/changelog stanza author entry

 -- Barak A. Pearlmutter <bap@debian.org>  Tue, 12 Jan 2021 19:43:17 +0000

perceptualdiff (2.1-1) unstable; urgency=medium

  * Update packaging scripts
  * Trivial debian/rules makes logs verbose (closes: #928266)
  * Trim trailing whitespace.
  * Explicitly specify source format.
  * Bump debhelper to 13. (closes: #965773)
  * Set debhelper-compat version in Build-Depends.
  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
    Repository-Browse.
  * Add debian/changelog close clause colons
  * Add debian/watch uscan support file
  * Bump policy
  * New upstream release
    - checks --output error, see 9dffbb97 "Failed to save" (closes: #836777)

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 11 Jan 2021 22:47:03 +0000

perceptualdiff (1.2-2) unstable; urgency=medium

  * Fix build problem
  * Remove unnecessary file (closes: #666886)

 -- Jeff Breidenbach <jab@debian.org>  Tue, 04 Aug 2015 22:23:16 +0000

perceptualdiff (1.2-1) unstable; urgency=medium

  * Switch to OpenMP fork (closes: #673934)

 -- Jeff Breidenbach <jab@debian.org>  Fri, 31 Jul 2015 00:19:43 +0000

perceptualdiff (1.1.1-2) unstable; urgency=low

  * libtiff transition (closes: #736036)
  * libpng transition (closes: #636969, #636969)
