@@ -1,7 +1,7 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.16.
-.TH PERCEPTUALDIFF "1" "January 2021" "perceptualdiff 2.1" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.48.1.
+.TH PERCEPTUALDIFF "1" "April 2021" "perceptualdiff 2.1" "User Commands"
 .SH NAME
-perceptualdiff \- manual page for perceptualdiff 2.1
+perceptualdiff \- perceptual image comparison tool
 .SH SYNOPSIS
 .B perceptualdiff
 [\fI\,options\/\fR] \fI\,image1 image2\/\fR
